<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/map_list"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/nav_title_map_view"/>
    <item
        android:id="@+id/view_list"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/nav_title_list_view"/>
    <item
        android:id="@+id/workmates"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/nav_title_workmates"/>
</menu>